prise en charge des réponses HTTP GZIP et correction des caractères accentués dans la console Windows (charset : cp850)

--- a/src/main/resources/jcurl/Cli_fr.properties
+++ b/src/main/resources/jcurl/Cli_fr.properties
@@ -1,1 +1,11 @@
-param.version=
+
+param.V.description                      = Affiche des informations sur la version de ${project.name} utilis\u00E9e.
+param.X_patchConsoleEncoding.description = Corriger les probl\u00E8mes d'encodage pour l'affichage en mode console \
+                                           (essentiellement pour la console sous WIndows avec l'encodage fix\u00E9 \
+                                           \u00E0 cp850)
+param.X_showEnvParams.description        = Affiche les variables d'environnements et les propri\u00E9t\u00E9s \
+                                           syst\u00E8me
+param.h.description                      = Manuel utilisateur.
+param.i.description                      = Affiche les ent\u00EAtes HTTP dans la sortie. Les ent\u00EAtes HTTP inclues \
+                                           des choses comme le nom du serveur, la date du la ressource, la version \
+                                           HTTP utilis\u00E9e, etc.
